<resources>
    <string name="app_name">ImoUni</string>
    <string name="app_preferences" translatable="false">techpower</string>

    <!-- alterar -->
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>
    <string name="main">Página Inicial</string>

    <!-- Login -->
    <string name="login_tvTitulo">Login</string>
    <string name="login_tvUsername">Username</string>
    <string name="login_tvEmail">Email</string>
    <string name="login_tvPassword">Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="login_btnForgotPassword">Esqueceu-se da password?</string>
    <string name="login_tvSignupText">Não tens conta?</string>
    <string name="login_btnSignup">Regista-te</string>

    <!-- Signup -->
    <string name="signup_tvTitulo">Signup</string>
    <string name="signup_tvNome">Nome Completo</string>
    <string name="signup_hPrimeiro">Primeiro nome</string>
    <string name="signup_hUltimo">Ultimo nome</string>
    <string name="signup_rbtnMasculino">Masculino</string>
    <string name="signup_rbtnFeminino">Feminino</string>
    <string name="signup_tvUsername">Username</string>
    <string name="signup_tvEmail">Email</string>
    <string name="signup_tvTelemovel">Número de telemóvel</string>
    <string name="signup_tvGenero">Género</string>
    <string name="signup_cbGenero_mas">Masculino</string>
    <string name="signup_cbGenero_fem">Feminino</string>
    <string name="signup_tvNascimento">Data de nascimento</string>
    <string name="signup_tvPassword">Password</string>
    <string name="signup_tvTipo">Tipo de utilizador</string>
    <string name="signup_btnSignup">Signup</string>
    <string name="signup_success">Account Created Successfully!</string>
    <string name="signup_error">ERROR!\nUsername, E-mail or NIF Already in use.</string>

    <string-array name="spTipo">
        <item>Estudante</item>
        <item>Senhorio</item>
    </string-array>

    <!-- Edit profile -->
    <string name="editprofile_tvTitulo">Editar profile</string>
    <string name="editprofile_tvTelemovel">Número de telemóvel</string>
    <string name="editprofile_tvPassword">Password</string>
    <string name="editprofile_btnSave">Atualizar</string>
    <string name="editprofile_btnDel">Apagar Conta</string>

    <string name="main_tvTextInicial">Encontre uma casa nas melhores cidades universitárias</string>
    <string name="main_tvAnuncios">Anúncios</string>

    <!-- Anuncio -->
    <string name="anuncio_titulo">Apartamento T1 em Coimbra</string>

    <string name="anuncio_infoTitulo">Sobre o anuncio</string>
    <string name="anuncio_proprietario">Proprietario: </string>
    <string name="anuncio_preco">Preço: </string>
    <string name="anuncio_despesas">Despesas incluidas</string>
    <string name="anuncio_dataDisponibilidade"> quartos disponíveis</string>
    <string name="anuncio_dataAnuncio">Data do anuncio: </string>

    <!-- Propriedade -->
    <string name="anuncio_descricaoTitulo">Sobre a propriedade</string>

    <!-- Casa -->
    <string name="anuncio_casaTitulo">Características da casa</string>
    <string name="anuncio_wifi">WI-FI</string>
    <string name="anuncio_limpeza">Limpeza </string>
    <string name="anuncio_capacidade">Capacidade de </string>
    <string name="anuncio_numSalas">Número de salas: </string>
    <string name="anuncio_numCozinhas">Número de cozinhas: </string>
    <string name="anuncio_numQuartos">Número de quartos: </string>
    <string name="anuncio_numWCs">Número de quartos de banho: </string>
    <string name="anuncio_exterior">Área exterior</string>

    <!-- Sala -->
    <string name="anuncio_salaTitulo">Características da(s) sala(s)</string>
    <string name="anuncio_televisao">Televisão</string>
    <string name="anuncio_sofa">Sofá</string>
    <string name="anuncio_mesa">Mesa</string>
    <string name="anuncio_moveis">Móveis</string>
    <string name="anuncio_salaAC">Ar condicionado</string>

    <!-- Cozinha -->
    <string name="anuncio_cozinhaTitulo">Características da(s) Cozinha(s)</string>
    <string name="anuncio_lavaLoica">Lava-loica</string>
    <string name="anuncio_maquinaLoica">Máquina de loica</string>
    <string name="anuncio_maquinaRoupa">Máquina de roupa</string>
    <string name="anuncio_tostadeira">Tostadeira</string>
    <string name="anuncio_torradeira">Torradeira</string>
    <string name="anuncio_microOndas">Micro-ondas</string>
    <string name="anuncio_frigorifico">Frigorifico </string>
    <string name="anuncio_arca">Arca</string>
    <string name="anuncio_fogao">Fogão</string>
    <string name="anuncio_forno">Forno</string>

    <!-- Quarto -->
    <string name="anuncio_quartoTitulo">Características do(s) quarto(s)</string>
    <string name="anuncio_tamanho">Quarto </string>
    <string name="anuncio_tipoCama">Cama de </string>
    <string name="anuncio_varanda">Varanda</string>
    <string name="anuncio_secretaria">Secretária</string>
    <string name="anuncio_armario">Armário</string>
    <string name="anuncio_quartoAC">Ar condicionado</string>

    <!-- Regras -->
    <string name="anuncio_regrasTitulo">Regras da casa</string>
    <string name="anuncio_regrasVisitantes">Visitantes podem pernoitar</string>
    <string name="anuncio_regrasFumar">Proibido fumar</string>
    <string name="anuncio_regrasAnimais">Animais de estimação proibidos</string>

    <!-- AddAnuncio -->
    <string name="addAnuncio_titulo">Apartamento T1 em Coimbra</string>

    <string name="addAnuncio_infoTitulo">Sobre o anuncio</string>
    <string name="addAnuncio_preco">Preço: </string>
    <string name="addAnuncio_despesas">Despesas incluidas</string>

    <!-- Propriedade -->
    <string name="addAnuncio_descricaoTitulo">Sobre a propriedade</string>
    <string name="addanuncio_descricao">Descrição breve da propriedade</string>

    <!-- Casa -->
    <string name="addAnuncio_casaTitulo">Características da casa</string>
    <string name="addAnuncio_tipoAlojamento">Tipo do alojamento: </string>
    <string name="addAnuncio_wifi">WI-FI</string>
    <string name="addAnuncio_limpeza">Limpeza: </string>
    <string name="addAnuncio_numSalas">Número de salas: </string>
    <string name="addAnuncio_numCozinhas">Número de cozinhas: </string>
    <string name="addAnuncio_numQuartos">Número de quartos: </string>
    <string name="addAnuncio_numWCs">Número de quartos de banho: </string>
    <string name="addAnuncio_aquecimentoAgua">Aquecimento de água: </string>
    <string name="addAnuncio_exterior">Área exterior</string>

    <!-- Sala -->
    <string name="addAnuncio_salaTitulo">Características da(s) sala(s)</string>
    <string name="addAnuncio_televisao">Televisão</string>
    <string name="addAnuncio_sofa">Sofá</string>
    <string name="addAnuncio_mesa">Mesa</string>
    <string name="addAnuncio_moveis">Móveis</string>
    <string name="addAnuncio_aquecimento">Aquecimento: </string>
    <string name="addAnuncio_salaAC">Ar condicionado</string>

    <!-- Cozinha -->
    <string name="addAnuncio_cozinhaTitulo">Características da(s) Cozinha(s)</string>
    <string name="addAnuncio_lavaLoica">Lava-loica</string>
    <string name="addAnuncio_maquinaLoica">Máquina de loica</string>
    <string name="addAnuncio_maquinaRoupa">Máquina de roupa</string>
    <string name="addAnuncio_tostadeira">Tostadeira</string>
    <string name="addAnuncio_torradeira">Torradeira</string>
    <string name="addAnuncio_microOndas">Micro-ondas</string>
    <string name="addAnuncio_frigorifico">Frigorifico: </string>
    <string name="addAnuncio_arca">Arca</string>
    <string name="addAnuncio_fogao">Fogão: </string>
    <string name="addAnuncio_forno">Forno</string>

    <!-- Quarto -->
    <string name="addAnuncio_quartoTitulo">Características do(s) quarto(s)</string>
    <string name="addAnuncio_tamanhoQuarto">Quarto: </string>
    <string name="addAnuncio_tipoCama">Cama de: </string>
    <string name="addAnuncio_varanda">Varanda</string>
    <string name="addAnuncio_secretaria">Secretária</string>
    <string name="addAnuncio_armario">Armário</string>
    <string name="addAnuncio_quartoAC">Ar condicionado</string>

    <!-- Regras -->
    <string name="addAnuncio_regrasTitulo">Regras da casa</string>
    <string name="addAnuncio_regrasVisitantes">Visitantes podem pernoitar</string>
    <string name="addAnuncio_regrasFumar">Proibido fumar</string>
    <string name="addAnuncio_regrasAnimais">Animais de estimação proibidos</string>

    <string name="addanuncio_publicar">publicar</string>
    <string name="title_activity_add_anuncio">AddAnuncioActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Username">Username</string>

    <!-- Lista anúncios -->
    <string name="listaAnuncio_titulo">Título: </string>
    <string name="listaAnuncio_publicado">Publicado: </string>
    <string name="listaAnuncio_preco">Preço: </string>
    <string name="listaAnuncio_descricao">Descrição: </string>

    <!-- Vistas -->
    <string name="detalhesAnuncioActivity_titulo">Título inválido</string>
    <string name="detalhesAnuncioActivity_preco">Preço inválido</string>
    <string name="detalhesAnuncioActivity_descricao">Descrição inválida</string>
    <string name="EditProfileFragment_onRefreshDetalhes">A sua conta foi atualizada com sucesso!</string>
    <string name="EditProfileFragment_onApagarConta">A sua conta foi apagada com sucesso!</string>
    <string name="ListaAnuncioFragment_onActivityResultADICIONAR">Anuncio adicionado com sucesso</string>
    <string name="ListaAnuncioFragment_onActivityResultEDITAR">Anúncio Editado com sucesso</string>
    <string name="LoginFragment_onValidateLogin">Bem Vindo!</string>
    <string name="LoginFragment_onValidateLoginERROR">Utilizador ou Palavra-Passe Incorretos!</string>
    <string name="MenuMainActivity_carregarFragmento">Inicial</string>
    <string name="SignupFragment_rbtnMasculino">masculino</string>
    <string name="SignupFragment_rbtnFeminino">feminino</string>
    <string name="SignupFragment_primeiroNome">Primeiro nome inválido</string>
    <string name="SignupFragment_ultimoNome">Ultimo nome inválido</string>
    <string name="SignupFragment_username">Nome de Utilizador Inválido</string>
    <string name="SignupFragment_email">Email inválido</string>
    <string name="SignupFragment_password">Palavra Passe Inválida, é necessário ter mais de 8 caractéres</string>
    <string name="SignupFragment_numeroTelemovel">Número de telemóvel inválido</string>
    <string name="SignupFragment_error">Sem ligação à Internet!</string>
    <string name="SignupFragment_onUserRegistadoEmail">Este email já se encontra registado!</string>
    <string name="SignupFragment_onUserRegistadoUsername">Este nome de utilizador já se encontra registado!</string>
    <string name="SignupFragment_onUserRegistadoNumeroTelemovel">Este numero de telemovel já se encontra registado!</string>
    <string name="SignupFragment_onUserRegistadoFalse">Bem Vindo(a), a sua conta foi registada com sucesso!</string>
</resources>