<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".vistas.SignupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/imounilogo"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:text="@string/signup_tvTitulo"
                    />

                <TextView
                    android:id="@+id/tvNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/signup_tvNome"
                    android:textSize="22sp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etprimeiroNome"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/signup_hPrimeiro"
                        android:textSize="18sp"
                        />

                    <EditText
                        android:id="@+id/etultimoNome"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/signup_hUltimo"
                        android:textSize="18sp"
                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/signup_tvUsername"
                    android:textSize="22sp"
                    />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/signup_tvEmail"
                    android:textSize="22sp"
                    />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/tvTelemovel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/signup_tvTelemovel"
                    android:textSize="22sp"
                    />

                <EditText
                    android:id="@+id/etTelemovel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="18sp"
                    />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbtnMasculino"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/signup_rbtnMasculino"
                        android:textSize="14sp" />


                    <RadioButton
                        android:id="@+id/rbtnFeminino"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/signup_rbtnFeminino"
                        android:textSize="14sp" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_tvPassword"
                    android:textSize="22sp"
                    />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    />

                <Button style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/btnSignup"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="40dp"
                    android:layout_marginVertical="20dp"
                    android:text="@string/signup_btnSignup"
                    android:textSize="20sp"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>